syntax = "proto3";

option go_package = "../pb;pb";
// protoc --go_out=. user.proto
// protoc --go-grpc_out=. user.proto

import "common.proto";

service UserService {
  // 获取用户信息
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  // 获取用户信息字典
  rpc GetUserInfoDict(GetUserInfoDictRequest) returns (GetUserInfoDictResponse);
  //检查密码
  rpc CheckPassWord(CheckPassWordRequest) returns (CheckPassWordResponse);
  // 注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // 更新 我的获赞数
  rpc UpdateUserFavoritedCount(UpdateUserFavoritedCountReq) returns (UpdateUserFavoritedCountRsp);
  // 更新我喜欢的视频总数
  rpc UpdateUserFavoriteCount(UpdateUserFavoriteCountReq) returns (UpdateUserFavoriteCountRsp);
  // 更新我的关注数
  rpc UpdateUserFollowCount(UpdateUserFollowCountReq) returns (UpdateUserFollowCountRsp);
  // 更新我的粉丝数
  rpc UpdateUserFollowerCount(UpdateUserFollowerCountReq) returns (UpdateUserFollowerCountRsp);
  // 更新我的作品数
  rpc UpdateWorkCount(UpdateUserWorkCountReq) returns (UpdateUserWorkCountRsp);

  //todo
  rpc CacheChangeUserCount(CacheChangeUserCountReq) returns (CacheChangeUserCountRsp);
  rpc CacheGetAuthor (CacheGetAuthorReq) returns (CacheGetAuthorRsp);
}

// UserInfo
message UserInfo {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //头像地址
  string background_image = 7;//背景图片地址
  string signature = 8;//个性签名
  int64 total_favorited = 9; // 获赞总数
  int64 work_count = 10; // 视频数量
  int64 favorite_count = 11; // 点赞数量
}

// ******
message UpdateUserFollowCountReq {
  int64 user_id = 1;
  int64 action_type = 2;
}

message UpdateUserFollowCountRsp {
  CommonResponse common_rsp = 1;
}
// ******

// ******
message UpdateUserFollowerCountReq {
  int64 user_id = 1;
  int64 action_type = 2;
}

message UpdateUserFollowerCountRsp {
  CommonResponse common_rsp = 1;
}
// ******

// ******
message UpdateUserFavoritedCountReq {
  int64 user_id = 1;
  int64 action_type = 2;
}

message UpdateUserFavoritedCountRsp {
  CommonResponse common_rsp = 1;
}
// ******


// ******
message UpdateUserFavoriteCountReq {
  int64 user_id = 1;
  int64 action_type = 2;
}

message UpdateUserFavoriteCountRsp {
  CommonResponse common_rsp = 1;
}
// ******

// ******
message UpdateUserWorkCountReq {
  int64 user_id = 1;
}

message UpdateUserWorkCountRsp {
  CommonResponse common_rsp = 1;
}
// ******


// ******
message GetUserInfoDictRequest {
  repeated int64 user_id_list = 1;
}

message GetUserInfoDictResponse {
  map<int64, UserInfo> user_info_dict = 1;
}
// ******


// ******
message GetUserInfoRequest {
  int64 user_id = 1;
  //string token = 2;
}


message GetUserInfoResponse {
  int32 status_code = 1;
  string status_msg = 2;
  UserInfo user = 3;
}
// ******

// ******
message CheckPassWordRequest {
  string username = 1;
  string password = 2;
}

message CheckPassWordResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string  token = 4;
}
// ******

// ******
message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}
// ******



//todo
// ******
message CacheChangeUserCountReq {
  int64 user_id = 1;
  int64 op = 2;
  string count_type = 3;
}

message CacheChangeUserCountRsp {
  CommonResponse common_rsp = 1;
}
// ******

// ******
message CacheGetAuthorReq {
  int64 video_id = 1;
}

message CacheGetAuthorRsp {
  int64 user_id = 1;
}
// ******

